crates/ruff_python_parser/tests/snapshots/valid_syntax@global_stmt.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/global_stmt.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..24,
        body: [
            Global(
                StmtGlobal {
                    node_index: NodeIndex(None),
                    range: 0..8,
                    names: [
                        Identifier {
                            id: Name("x"),
                            range: 7..8,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                    ],
                },
            ),
            Global(
                StmtGlobal {
                    node_index: NodeIndex(None),
                    range: 9..23,
                    names: [
                        Identifier {
                            id: Name("x"),
                            range: 16..17,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                        Identifier {
                            id: Name("y"),
                            range: 19..20,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                        Identifier {
                            id: Name("z"),
                            range: 22..23,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                    ],
                },
            ),
        ],
    },
)
```
